--- a/Zoologico.API/appsettings.json
+++ b/Zoologico.API/appsettings.json
@@ -6,10 +6,64 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "ZoologicoAPIContext.sqlserver": "Server=.;Database=Zoologico;User Id=sa;Password=sa.1234;TrustServerCertificate=true",
-        "ZoologicoAPIContext.mariadb": "Server=127.0.0.1;Database=zoologico;Uid=root;Pwd=12345678;",
-        "ZoologicoAPIContext.postgresql": "User ID=postgres;Password=12345678;Host=localhost;Port=5432;Database=zoologico",
-        "ZoologicoAPIContext.oracle": "User Id=zoologico;Password=12345678;Data Source=192.168.181.128:1521/XE;"
+  "ConnectionStrings": {
+    "ZoologicoAPIContext.sqlserver": "Server=.;Database=Zoologico;User Id=sa;Password=sa.1234;TrustServerCertificate=true",
+    "ZoologicoAPIContext.mariadb": "Server=127.0.0.1;Database=zoologico;Uid=root;Pwd=12345678;",
+    "ZoologicoAPIContext.postgresql": "User ID=postgres;Password=12345678;Host=localhost;Port=5432;Database=zoologico",
+    "ZoologicoAPIContext.oracle": "User Id=zoologico;Password=12345678;Data Source=192.168.181.128:1521/XE;"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:5050"
+      }
     }
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Using": [ "Serilog.Sinks.File" ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/zoologico_api_.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] {Message:lj}. {Exception}{NewLine}",
+          "restrictedToMinimumLevel": "Information",
+          "fileSizeLimitBytes": 100485760,
+          "rollOnFileSizeLimit": true,
+          "shared": true,
+          "buffered": false
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/zoologico_api_critical_.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] {Message:lj}. {Exception}{NewLine}",
+          "restrictedToMinimumLevel": "Error",
+          "fileSizeLimitBytes": 100485760,
+          "rollOnFileSizeLimit": true,
+          "shared": true,
+          "buffered": false
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ]
+  }
 }
